src/libadalang/src/libadalang.h

/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef void* ada_base_node;
typedef uint8_t ada_bool;
        

typedef struct ada_ada_node_array_record *ada_ada_node_array;
        



typedef struct {
        ada_internal_metadata md;
        ada_env_rebindings_type rebindings;
        ada_bool from_rebound;
} ada_internal_entity_info;
        



typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
        



/*

 */
struct ada_ada_node_array_record {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
        



/*
 * If this subprogram is a primitive for a tagged type, then return this type.
 */
extern int ada_base_subp_spec_p_primitive_subp_tagged_type(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/*
 * Returns the return type of Self, if applicable (e.g. if Self is a
 * subprogram). Else, returns null.
 */
extern int ada_base_subp_spec_p_return_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        



/*

 */
extern int ada_entry_spec_f_entry_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_attribute_ref``,
 * ``ada_bin_op``, ``ada_call_expr``, ``ada_char_literal``,
 * ``ada_dotted_name``, ``ada_explicit_deref``, ``ada_identifier``,
 * ``ada_qual_expr``, ``ada_reduce_attribute_ref``, ``ada_string_literal``,
 * ``ada_subtype_indication``, ``ada_target_name``,
 * ``ada_update_attribute_ref``
 */
extern int ada_entry_spec_f_family_type(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_entry_spec_f_entry_params(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_subp_spec_f_subp_kind(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_subp_spec_f_subp_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_subp_spec_f_subp_params(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_anonymous_type``,
 * ``ada_subtype_indication``
 */
extern int ada_subp_spec_f_subp_returns(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_synthetic_binary_spec_f_left_param(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_synthetic_binary_spec_f_right_param(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_synthetic_binary_spec_f_return_type_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_synthetic_unary_spec_f_right_param(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_synthetic_unary_spec_f_return_type_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``ada_aspect_clause``, ``ada_component_decl``, ``ada_null_component_decl``,
 * ``ada_pragma_node``
 */
extern int ada_component_list_f_components(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_component_list_f_variant_part(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_known_discriminant_part_f_discr_specs(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_entry_completion_formal_params_f_params(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``ada_generic_formal``, ``ada_pragma_node``, ``ada_use_clause``
 */
extern int ada_generic_formal_part_f_decls(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_base_record_def_f_components(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Return the list of parameters that this association refers to.
 */
extern int ada_basic_assoc_p_get_params(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_ada_node_array *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``ada_allocator``, ``ada_attribute_ref``, ``ada_base_aggregate``,
 * ``ada_bin_op``, ``ada_call_expr``, ``ada_char_literal``, ``ada_concat_op``,
 * ``ada_cond_expr``, ``ada_decl_expr``, ``ada_discrete_subtype_indication``,
 * ``ada_dotted_name``, ``ada_explicit_deref``, ``ada_identifier``,
 * ``ada_membership_expr``, ``ada_null_literal``, ``ada_num_literal``,
 * ``ada_others_designator``, ``ada_paren_expr``, ``ada_qual_expr``,
 * ``ada_quantified_expr``, ``ada_raise_expr``, ``ada_reduce_attribute_ref``,
 * ``ada_string_literal``, ``ada_target_name``, ``ada_un_op``,
 * ``ada_update_attribute_ref``
 */
extern int ada_aggregate_assoc_f_designators(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_allocator``,
 * ``ada_attribute_ref``, ``ada_base_aggregate``, ``ada_bin_op``,
 * ``ada_box_expr``, ``ada_call_expr``, ``ada_char_literal``,
 * ``ada_concat_op``, ``ada_cond_expr``, ``ada_decl_expr``,
 * ``ada_dotted_name``, ``ada_explicit_deref``, ``ada_identifier``,
 * ``ada_membership_expr``, ``ada_null_literal``, ``ada_num_literal``,
 * ``ada_paren_expr``, ``ada_qual_expr``, ``ada_quantified_expr``,
 * ``ada_raise_expr``, ``ada_reduce_attribute_ref``, ``ada_string_literal``,
 * ``ada_target_name``, ``ada_un_op``, ``ada_update_attribute_ref``
 */
extern int ada_aggregate_assoc_f_r_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_composite_constraint_assoc_f_ids(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_allocator``,
 * ``ada_attribute_ref``, ``ada_base_aggregate``, ``ada_bin_op``,
 * ``ada_call_expr``, ``ada_char_literal``, ``ada_concat_op``,
 * ``ada_cond_expr``, ``ada_decl_expr``, ``ada_discrete_subtype_indication``,
 * ``ada_dotted_name``, ``ada_explicit_deref``, ``ada_identifier``,
 * ``ada_membership_expr``, ``ada_null_literal``, ``ada_num_literal``,
 * ``ada_paren_expr``, ``ada_qual_expr``, ``ada_quantified_expr``,
 * ``ada_raise_expr``, ``ada_reduce_attribute_ref``, ``ada_string_literal``,
 * ``ada_target_name``, ``ada_un_op``, ``ada_update_attribute_ref``
 */
extern int ada_composite_constraint_assoc_f_constraint_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*

 */
extern int ada_iterated_assoc_f_spec(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``ada_allocator``,
 * ``ada_attribute_ref``, ``ada_base_aggregate``, ``ada_bin_op``,
 * ``ada_call_expr``, ``ada_char_literal``, ``ada_concat_op``,
 * ``ada_cond_expr``, ``ada_decl_expr``, ``ada_dotted_name``,
 * ``ada_explicit_deref``, ``ada_identifier``, ``ada_membership_expr``,
 * ``ada_null_literal``, ``ada_num_literal``, ``ada_paren_expr``,
 * ``ada_qual_expr``, ``ada_quantified_expr``, ``ada_raise_expr``,
 * ``ada_reduce_attribute_ref``, ``ada_string_literal``, ``ada_target_name``,
 * ``ada_un_op``, ``ada_update_attribute_ref``
 */
extern int ada_iterated_assoc_f_r_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);